fixup! Add CitationsController#index action
Prevent very long URLs overflowing.

--- a/app/assets/stylesheets/responsive/_citations.scss
+++ b/app/assets/stylesheets/responsive/_citations.scss
@@ -23,6 +23,7 @@ ul.citations-list {
 
     .citation__title {
       flex-basis: 50%;
+      word-break: break-word;
     }
 
     .citation__description {
